# bevy-flappy-birds-clone

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: debug.rs  game.rs  input.rs  main.rs  menu.rs  pipes.rs  player.rs  splash.rs
